--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
       "use": "@vercel/static-build",
       "config": { "distDir": "build" }
     }
+  ],
+    "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
